fix: clippy flair bg color to $primary

--- a/src/extensions/community_extensions/_clippyPoint-paperclip.scss
+++ b/src/extensions/community_extensions/_clippyPoint-paperclip.scss
@@ -50,7 +50,7 @@ $_comment-start: $_clippy-start + $_clippy-width + $_clippy-after-tweak;
         line-height: 15px;
         margin-top: -2px;
         padding: 6px 6px;
-        @include v.theme("background-color", v.$banner-backgroundColor);
+        @include v.theme("background-color", v.$primary);
         @include v.theme("color", v.$menuActiveText);
         // @include v.theme-stroke(v.$darkText);
         text-shadow: 0px 1px 0px #333333;
